--- a/src/components/ui/select/Select.module.scss
+++ b/src/components/ui/select/Select.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/variables';
+@import "../../../shared/styles/variables";
 
 .icon {
   width: 22px;
@@ -9,73 +9,73 @@
 
 .trigger {
   cursor: pointer;
-  
+
   display: flex;
   align-items: center;
   justify-content: space-between;
-  
+
   width: 100%;
   height: 58px;
   padding: 16px 18px;
-  
+
   text-align: center;
 
-  border: 1px solid #2125311A;
+  border: 1px solid #2125311a;
   border-radius: 4px;
   background-color: var(--color-bg);
-  
+
   &:disabled {
     opacity: 0.5;
   }
 
-  &[data-state='open'] .icon {
+  &[data-state="open"] .icon {
     transform: rotate(180deg);
     transition: all 0.2s ease-in-out;
   }
-  
-  &[data-state='closed'] .icon {
+
+  &[data-state="closed"] .icon {
     transition: all 0.3s ease-in-out;
   }
 
-    color: var(--color-grey-3);
-    font-family: var(--font-rubik);
-    font-size: 18px;
+  color: var(--color-grey-3);
+  font-family: var(--font-rubik);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.33px;
+  @media (max-width: $mobile) {
+    font-family: var(--font-onest);
+    font-size: 16px;
     font-weight: 400;
-    line-height: 21.33px;
-    @media (max-width: $mobile) {
-      font-family: var(--font-onest);
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 22.4px;
-    }
+    line-height: 22.4px;
+  }
 }
 
 .triggerSecondary {
   cursor: pointer;
-  
+
   display: flex;
   align-items: center;
   gap: 5px;
   width: 100%;
-  
+
   text-align: center;
-  
+
   border: none;
   border-radius: 4px;
-  
+
   &:disabled {
     opacity: 0.5;
   }
-  
-  &[data-state='open'] .icon {
+
+  &[data-state="open"] .icon {
     transform: rotate(180deg);
     transition: all 0.2s ease-in-out;
   }
-  
-  &[data-state='closed'] .icon {
+
+  &[data-state="closed"] .icon {
     transition: all 0.3s ease-in-out;
   }
-  
+
   &[data-placeholder] {
     color: var(--color-grey-3);
     font-family: var(--font-rubik);
@@ -97,7 +97,7 @@
   max-height: var(--radix-select-content-available-height);
   padding: 18px 16px;
   border-radius: 4px;
-  border: 1px solid #2125311A;
+  border: 1px solid #2125311a;
   background-color: var(--color-bg);
 
   animation: fade-in 0.5s ease;
@@ -106,14 +106,14 @@
 .selectItem {
   cursor: pointer;
   gap: 12px;
-  
-  color: var(--color-grey-3); 
+
+  color: var(--color-grey-3);
   background-color: var(--color-bg);
   transition: all 0.3s;
 
   margin-bottom: 12px;
 
-  &:last-child{
+  &:last-child {
     margin-bottom: 0;
   }
 
@@ -121,14 +121,13 @@
     outline: none;
   }
 
-  &[data-state='checked'] {
+  &[data-state="checked"] {
     color: var(--color-text);
   }
 
   &:hover {
-    color: var(--color-accent-orange)
+    color: var(--color-accent-orange);
   }
-
 }
 
 .option {
@@ -142,10 +141,10 @@
   font-weight: 400;
   line-height: 21.33px;
   @media (max-width: $mobile) {
-      font-family: var(--font-onest);
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 22.4px;
+    font-family: var(--font-onest);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22.4px;
   }
 }
 
