--- a/src/components/ui/pagination/Pagination.module.scss
+++ b/src/components/ui/pagination/Pagination.module.scss
@@ -1,41 +1,47 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
 .button {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .pagination {
-    display: flex;
-    gap: 8px;
+  display: flex;
+  gap: 8px;
 }
 .paginationElem {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    
-    padding: 0 8px;
-    width: 26px;
-    height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 
-    color: var(--color-text);
-    border: none;
-    border-radius: 4px;
-    background-color: transparent;
-    &.active {
-        background-color: var(--color-text);
-        & > span {
-            color: var(--color-bg);
-        }
+  padding: 0 8px;
+  width: 26px;
+  height: 24px;
+
+  color: var(--color-text);
+  border: none;
+  border-radius: 4px;
+  background-color: transparent;
+  &.active {
+    background-color: var(--color-text);
+    & > span {
+      color: var(--color-bg);
     }
-
+  }
 }
+
+.dots {
+  padding: 0 8px;
+  //   color: var(--your-muted-color);
+  user-select: none;
+}
+
 .icon {
-    width: 22px;
-    height: 22px;
+  width: 22px;
+  height: 22px;
 }
