--- a/src/components/header/header-info/HeaderInfo.module.scss
+++ b/src/components/header/header-info/HeaderInfo.module.scss
@@ -1,45 +1,44 @@
 .info {
-    width: 1296px;
-    height: 70px;
+  width: 1296px;
+  height: 70px;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .contacts {
-    display: flex;
-    // align-items: center;
-    gap: 24px;
-    height: 100%;
+  display: flex;
+  gap: 24px;
+  height: 100%;
 }
 .workTime {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 
-    width: 142px;
-    & > h6 {
-        color: #4F5E75;
-    }
-    & > p{
-        color: var(--color-text)
-    }
+  width: 170px;
+  & > h6 {
+    color: #4f5e75;
+  }
+  & > p {
+    color: var(--color-text);
+  }
 }
 .workPhone {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    & > h6 {
-        color: #4F5E75;
-    }
-    & > p{
-        color: var(--color-text)
-    }
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  & > h6 {
+    color: #4f5e75;
+  }
+  & > p {
+    color: var(--color-text);
+  }
 }
 
 .phoneContainer {
-    display: flex;
-    align-items: center;
-    gap: 8px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
